Fiber refactorings