@@ -16,7 +16,6 @@
  */
 package org.apache.arrow.flight.integration.tests;
 
-import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
@@ -103,10 +102,8 @@ class IntegrationTest {
     TestBufferAllocationListener listener = new TestBufferAllocationListener();
     try (final BufferAllocator allocator = new RootAllocator(listener, Long.MAX_VALUE)) {
       final ExecutorService exec =
-          Executors.newCachedThreadPool(
-              new ThreadFactoryBuilder()
-                  .setNameFormat("integration-test-flight-server-executor-%d")
-                  .build());
+          Executors.newThreadPerTaskExecutor(
+              Thread.ofVirtual().name("integration-test-flight-server-executor-", 0).factory());
       final FlightServer.Builder builder =
           FlightServer.builder()
               .executor(exec)
